--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
               Science degree. I am a passionate student interested in MERN stack
               development. Moreover, I am open to opportunties.
             </p>
-            <a class="download_btn" href="./cv.pdf" download="Resume.pdf"
-              >Download Btn</a
+            <a
+              class="download_btn"
+              href="./cv.pdf"
+              download="Aroob's Resume.pdf"
+              >Download btn</a
             >
           </div>
         </div>
@@ -158,7 +161,34 @@
           </div>
         </div>
       </div>
-      <div class="group-3"></div>
+      <hr />
+      <div class="group-3">
+        <div class="contact">
+          <h3 class="title">Contact</h3>
+          <div class="contact_info">
+            <p class="description">Quetta, Pakistan</p>
+            <p class="description">0333 3333333</p>
+            <p class="description">aroobmemon@gmail.com</p>
+          </div>
+        </div>
+        <div class="socials">
+          <h3 class="title">Socials</h3>
+          <div class="social_items">
+            <a href="#" class="social_item">
+              <i data-feather="github"></i>
+              <span> /Aroob-Aziz </span>
+            </a>
+            <a href="#" class="social_item">
+              <i data-feather="facebook"></i>
+              <span> /Aroob-Aziz </span>
+            </a>
+            <a href="#" class="social_item">
+              <i data-feather="twitter"></i>
+              <span> /Aroob-Aziz </span>
+            </a>
+          </div>
+        </div>
+      </div>
     </div>
     <script>
       feather.replace();
